--- a/openy_lily/sass/misc/_program.scss
+++ b/openy_lily/sass/misc/_program.scss
@@ -95,7 +95,7 @@
 
 .ui-dialog {
   .ui-dialog-content {
-    overflow: visible !important;
+    overflow: auto;
   }
   .ui-dialog-buttonpane {
     .ui-dialog-buttonset {
